# secp256r1-bindings

./: .gitmodules  CODEOWNERS  NOTICE  README.md
.github/workflows/: build-binaries.yml  build-osx-arm64.yml  test.yml
runtimes/: .gitignore
src/: CMakeLists.txt  Directory.Build.props  Directory.Packages.props  Nethermind.Crypto.SecP256r1.sln  Nethermind.Crypto.SecP256r1.slnx  exports.def  exports.exp  exports.lds
src/Nethermind.Crypto.SecP256r1/: BoringSSL.cs  BoringSsl.cs  BoringSsl1.cs  DerHelper.cs  Nethermind.Crypto.SecP256r1.csproj  SecP256r1.cs  Secp256r1.cs
src/Nethermind.Crypto.SecP256r1.Benchmarks/: Nethermind.Crypto.SecP256r1.Benchmarks.csproj  Program.cs  Secp256r1Benchmarks.cs
src/Nethermind.Crypto.SecP256r1.Tests/: Nethermind.Crypto.SecP256r1.Tests.csproj  SecP256r1Tests.cs  Secp256r1Tests.cs
src/Nethermind.Crypto.SecP256r1/runtimes/osx-arm64/native/: secp256r1.dylib
src/go-ecdsa/: build-linux-arm64.sh  build-linux-x64.sh  build-osx-arm64.sh  build-osx-x64.sh  build-win-x64.bat  main.go
